fix bug UI and responsive on tablet

--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,8 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    scroll-margin-top: 60px;
 }
 
 html,body {
